# pedestrian-abs

./: .gitignore  AUDIT_LOG.md  CLAUDE.md  PAPER_AUDIT.md  README.md  STATUS.json  inventory.md  pyproject.toml
.claude/: settings.local.json
analysis/: arch_lifetime.py  c1_epsilon_interpretation.py  external_comparison.py  fig2_sigmoid_gate.py  force_diagnostic.py  force_magnitude_and_gate.py  inventory.py  ood_per_paradigm.py  ood_validation.py  oracle_baseline.py  overlap_timing_diagnostic.py  scaling_figure.py  statistical_reanalysis.py  zonal_decomposition.py
config/: params.yaml
data/: README.md
new_experiments/: c1_epsilon_control.py  force_logging_run.py  r2_logging_run.py
paper/: consistency_report.md  main.aux  main.bbl  main.blg  main.tex  references.bib
results/: BidirectionalScenario_C1.csv  BidirectionalScenario_C2.csv  BidirectionalScenario_C3.csv  BidirectionalScenario_C4.csv  BottleneckScenario_C1.csv  BottleneckScenario_C2.csv  BottleneckScenario_C4.csv  Bottleneck_w1.0_C1.csv  Bottleneck_w2.4_C4.csv  CorridorScenario_C1.csv  CorridorScenario_C2.csv  CorridorScenario_C3.csv  CorridorScenario_C4.csv  CrossingScenario_C1.csv  CrossingScenario_C4.csv  Crush_D1.csv  Crush_D3.csv  Crush_D4.csv  FunnelScenario_300_D2.csv  FunnelScenario_D1.csv  FunnelScenario_D2.csv  FunnelScenario_D3.csv  FunnelScenario_D4.csv  empirical_fd.csv  fd_C1.csv  fd_C2.csv  fd_C4.csv  optimizer_history.json  scaling_C1.csv
results_analysis/: arch_lifetime_summary.md  arch_lifetimes.csv  external_comparison.csv  external_comparison.tex  external_comparison_paragraph.md  (+13 more)
(+387 files in other folders)
