[project]
name = "pedestrian-abs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24","scipy>=1.11","matplotlib>=3.7","pyyaml>=6.0","cma>=3.3","shapely>=2.0","pandas>=2.0"]
[project.optional-dependencies]
dev = ["pytest>=7.0"]
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sim*"]
